--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-on-rails": "11.3.0"
+    "react-on-rails": "11.3.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
